# ml-refresher

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  STUDY_GUIDE.md  maths for 11 to 15.ipynb  requirements.txt
api_engineering/capstones/01_trades_ledger/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
llm_pipeline/: README.md  langchain_langgraph.ipynb  llm_cheatsheet.md  pyproject.toml
llm_pipeline/capstones/: README.md
llm_pipeline/capstones/01_filings_rag/: .gitignore  main.py  pyproject.toml  rag.ipynb
llm_pipeline/capstones/02_desk_copilot_mcp/: .gitignore  README.md  agent.ipynb  pyproject.toml
llm_pipeline/capstones/03_earnings_supervisor/: .gitignore  README.md  graph.ipynb  pyproject.toml
llm_pipeline/capstones/04_equity_research_agent/: .gitignore  README.md  langgraph.json  pyproject.toml
llm_pipeline/src/: llm_card.html
ml/: README.md  pyproject.toml
ml/01_regression/: README.md  regression_cheatsheet.md
ml/01_regression/src/: regression_card.html
ml/02_classification/: README.md  classification_cheatsheet.md
ml/02_classification/src/: classification_card.html
ml/03_time_series/: README.md
ml/03_time_series/src/: time_series_card.html
ml/04_neural_networks/: .gitignore  README.md  neural_networks.ipynb  pyproject.toml
ml/04_neural_networks/src/: neural_networks_card.html
ml/classification/: classification.ipynb
ml/neural_networks/: README.md  neural_networks_cheatsheet.md
ml/neural_networks/capstone/: LESSONS_regression_nn.md  LESSONS_tabular_nn.md  capstone_tabular_nn.py
quant_finance/: CORE_FORMULAS.md  README.md  cov_test.py  pyproject.toml
quant_finance/01_options/: 00_black_scholes_intuition.ipynb  00_black_scholes_intuition.md  01_black_scholes.ipynb  01_black_scholes.md  02_bs_family_and_asset_classes.ipynb  02_bs_family_and_asset_classes.md  03_greeks.ipynb  03_greeks.md  04_binomial_trees.ipynb  04_binomial_trees.md  05_monte_carlo_pricing.ipynb  05_monte_carlo_pricing.md  06_implied_vol_surface.ipynb  06_implied_vol_surface.md  07_heston.ipynb  07_heston.md  README.md
quant_finance/01_options/cheatsheets/: bachelier.md  bs.md  sabr.md
quant_finance/02_risk/: 01_var_methods.ipynb  01_var_methods.md  02_expected_shortfall.ipynb  02_expected_shortfall.md  03_credit_merton.ipynb  03_credit_merton.md  04_cva_intro.ipynb  04_cva_intro.md  README.md
quant_finance/03_fixed_income/: 01_bond_pricing.ipynb  01_bond_pricing.md  02_duration_convexity_krd.ipynb  02_duration_convexity_krd.md  03_curve_building.ipynb  03_curve_building.md  04_swaps_swaptions.ipynb  04_swaps_swaptions.md  05_libor_market_model.ipynb  05_libor_market_model.md  06_loan_amortisation.md  07_deposit_fra.md  README.md  curve_building_cheatsheet.md  lmm_end_to_end_walkthrough.md  lmm_simulation_walkthrough.md  sabr_end_to_end_walkthrough.md
quant_finance/03_fixed_income/cheatsheets/: lmm.md  market_quoting.md
quant_finance/04_portfolio/: 01_markowitz.ipynb  01_markowitz.md  02_black_litterman.ipynb  02_black_litterman.md  03_risk_parity.ipynb  03_risk_parity.md  04_factor_models.ipynb  04_factor_models.md  05_performance_attribution.ipynb  05_performance_attribution.md  README.md
quant_finance/05_volatility/: 01_garch.ipynb  01_garch.md  02_realized_vol.ipynb  02_realized_vol.md  03_local_vol_dupire.ipynb  03_local_vol_dupire.md  README.md
quant_finance/06_stoch_calc/: 01_brownian_motion.ipynb  01_brownian_motion.md  02_ito_and_gbm.ipynb  02_ito_and_gbm.md  03_lsmc_american.ipynb  03_lsmc_american.md  README.md
quant_finance/07_market_risk_engine/bbg_reconciliation/: FX_VARIANCE_ROOT_CAUSE_PLAN.md  README.md  RECONCILING_FX.md  TRS_SECURITY_LEG_DF_METHODOLOGY.md  capture_inhouse.py  conftest.py  patch_bbg_dfs_fx.py  pytest.ini  run.py
quant_finance/07_market_risk_engine/cheatsheets/: risk_methods_cheatsheet.md  treasury_products_cheatsheet.md
quant_finance/07_market_risk_engine/drills/: extension_drill.py  extension_drill2.py  extension_drill2_SOLUTIONS.py  extension_drill_SOLUTIONS.py  hist_var_drill_SOLUTIONS.py  just_pandas_drills.py  just_pandas_drills_SOLUTIONS.py  just_valuation_drills.py  just_valuation_drills_SOLUTIONS.py  main.py  pyproject.toml  python_oop_drill.py  treasury_drill.py  treasury_drill_SOLUTIONS.py  var_methods_drill.py  var_methods_drill_SOLUTIONS.py  var_methods_ext_drill.py  var_methods_ext_drill_SOLUTIONS.py
quant_finance/capstones/: README.md
quant_finance/capstones/01_rates_portfolio/: README.md  (+1 more)
quant_finance/cheatsheets/: CORE_FORMULAS.md
quant_finance/data/: aapl_options_snapshot.pkl  fx_rates_snapshot.pkl
quant_finance/drills/: README.md  main.py  pyproject.toml
quant_finance/exercises/: README.md  pyproject.toml
toolkit/: README.md  deployment.ipynb  eda_decisions.md  eda_playbook.ipynb  gradient_boosting.ipynb  ml_project_methodology.md  mlflow_cheatsheet.md  numpy_scipy.ipynb  optuna.ipynb  pandas.ipynb  plotting.ipynb  pyproject.toml  shap.ipynb  sklearn.ipynb  statsmodels.ipynb
toolkit/data_analysis/: PROJECTS_README.md  README.md  numpy_cheatsheet.md  numpy_scipy_drill.py  pandas_cheatsheet.md  pandas_drill.py  plotting.ipynb  plotting_drill.py  plotting_project.py  pyproject.toml  sklearn.ipynb  sklearn_drill.py  sklearn_project.py
toolkit/data_science/: README.md  deployment_drill.py  deployment_project.py  eda_playbook.ipynb  eda_playbook_drill.py  gradient_boosting.ipynb  gradient_boosting_drill.py  gradient_boosting_project.py  ml_project_methodology.md  optuna_drill.py  optuna_project.py  pyproject.toml  shap.ipynb  shap_drill.py  statsmodels.ipynb  statsmodels_drill.py
toolkit/exercises/: README.md  deployment_project.ipynb  gradient_boosting_project.ipynb  numpy_scipy_project.ipynb  numpy_scipy_project.py  optuna_project.ipynb  pandas_project.ipynb  pandas_project.py  plotting_project.ipynb  shap_project.ipynb  shap_project.py  sklearn_project.ipynb  statsmodels_project.ipynb  statsmodels_project.py
toolkit/git/: git_team_tutorial.md
toolkit/mlops/: mlflow_cheatsheet.md
toolkit/testing_debugging/: pytest_debug_cheatsheet.md
(+361 files in other folders)
