[project]
name = "llm-pipeline-workspace"
version = "0"
description = "LLM pipeline subject workspace — LangChain/LangGraph capstones"
requires-python = ">=3.12, <3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "capstones/01_filings_rag",
    "capstones/02_desk_copilot_mcp",
    "capstones/03_earnings_supervisor",
    "capstones/04_equity_research_agent",
]
