[project]
name = "toolkit-workspace"
version = "0"
description = "Cross-cutting toolkit workspace — mlops (mlflow), data_analysis, data_science, drills"
requires-python = ">=3.12, <3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "data_analysis",
    "data_analysis/mini_drills",
    "data_science",
]
