[project]
name = "neural-networks"
version = "0.1.0"
description = "Neural network best practices: end-to-end regression + classification in PyTorch"
requires-python = ">=3.10, <3.14"
dependencies = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

# [tool.uv.sources] hoisted to the ml/ workspace root — no longer duplicated here.
