[project]
name = "data-analysis-drills"
version = "0.1.0"
description = "toolkit/data_analysis — numpy/scipy/pandas/sklearn/plotting drill scripts + reference cards"
requires-python = ">=3.12, <3.14"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "pyarrow>=12.0",           # parquet IO — used by every *_project.py
]
