[project]
name = "data-science-drills"
version = "0.1.0"
description = "toolkit/data_science — end-to-end ML methodology drills (EDA, GBM, Optuna, SHAP, statsmodels, deployment)"
requires-python = ">=3.12, <3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "lightgbm>=4.0",
    "optuna>=3.5",
    "shap>=0.46",
    "numba>=0.60",              # forces modern llvmlite; avoids build failure on old versions
    "llvmlite>=0.43",
    "joblib>=1.3",
    "pydantic>=2.6",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pyarrow>=12.0",           # parquet IO — used by every *_project.py
]
