[project]
name = "trades-ledger-api"
version = "0.1.0"
description = "Capstone: production-grade async REST API for a trades ledger"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyjwt>=2.10",
    "pwdlib[argon2]>=0.2",
    "slowapi>=0.1.9",
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "python-multipart>=0.0.29",
]

# Dev dependencies (uv installs these by default; disable with --no-dev).
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "aiosqlite>=0.20",     # async sqlite driver for fast tests
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
