[project]
name = "filings-rag"
version = "0.1.0"
description = "10-K/10-Q RAG capstone — LangChain + Chroma"
requires-python = ">=3.12, <3.14"
dependencies = [
    "langchain>=1.3",
    "langchain-openai>=1.1",
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=1.1",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
    "ipykernel>=6.29",
    "pypdf>=4.0",
]
