[project]
name = "desk-copilot-mcp"
version = "0.1.0"
description = "Trading-desk copilot via MCP tools — LangChain + MCP"
requires-python = ">=3.12, <3.14"
dependencies = [
    "langchain>=1.3",
    "langchain-openai>=1.1",
    "langchain-anthropic>=1.0",
    "langgraph>=1.2",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.21",
    "python-dotenv>=1.0",
    "ipykernel>=6.29",
]
