[project]
name = "earnings-supervisor"
version = "0.1.0"
description = "Supervisor + 2 workers on earnings transcripts — LangGraph"
requires-python = ">=3.12, <3.14"
dependencies = [
    "langchain>=1.3",
    "langchain-openai>=1.1",
    "langgraph>=1.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "ipykernel>=6.29",
]
