[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-research-agent"
version = "0.1.0"
description = "Multi-agent equity research assistant — Capstone 4"
requires-python = ">=3.12, <3.14"
dependencies = [
    "langchain>=1.1.3",
    "langchain-openai>=1.1.14",
    "python-dotenv>=1.2.0",
    "langchain-anthropic>=1.0.3",
    "langchain-model-profiles>=0.0.4",
    "langchain-tavily>=0.2.13",
    "tavily-python>=0.7.13",
    "tavily>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "mcp>=1.21.1",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.3",
    "langgraph-cli>=0.4.9",
    "langgraph-api>=0.5.37",
    "scipy>=1.16.3",
    "langchain-google-vertexai>=3.0.3",
    "langchain-google-genai>=3.1.0",
    "langsmith>=0.7.31",
    "langchain-core>=1.1.3",
    "langchain-chroma>=0.1",
    "yfinance>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "ipython>=9.13.0",
    "grandalf>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["equity_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests requiring live LLM / network",
]
