[project]
name = "lmm-nn-surrogate"
version = "0.1.0"
description = "LMM NN surrogate capstone — root project (see api_extension/ and agents_extension/ for extensions)"
requires-python = ">=3.12, <3.14"
dependencies = [
    "joblib>=1.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "torch>=2.2",
]

# [tool.uv.sources] hoisted to quant_finance/ workspace root — inherited.
