[project]
name = "data-analysis-drills-numbered"
version = "0.1.0"
description = "toolkit/data_analysis/mini_drills — numbered 01-13 quant/ML drill exercises"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
]
