[project]
name = "lmm-nn-surrogate-api"
version = "0.1.0"
description = "MLflow registry + FastAPI extension on the LMM NN surrogate capstone."
requires-python = ">=3.12, <3.14"
dependencies = [
    "mlflow>=2.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "joblib>=1.3",
    "torch>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

# [tool.uv.sources] hoisted to quant_finance/ workspace root — inherited.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
