[project]
name = "agents-extension"
version = "0.1.0"
description = "Multi-agent LangGraph workflow that drives the LMM surrogate API"
requires-python = ">=3.12"
dependencies = [
    # LangGraph + LangChain for the multi-agent framework
    "langgraph>=0.6",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    # HTTP client for calling the surrogate API
    "httpx>=0.27",
    # Config (mirrors api_extension's pydantic-settings pattern)
    "pydantic-settings>=2.5",
    # CLI niceness
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",                  # httpx mock
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
