[project]
name = "agents-extension"
version = "0.1.0"
description = "Multi-agent LangGraph workflow that drives the LMM surrogate API"
requires-python = ">=3.12"
dependencies = [
    # LangChain + LangGraph 1.x — released late 2025 with stability guarantees
    # (no breaking changes promised until 2.0). The 1.x line introduced
    # `langchain.agents.create_agent` to replace `langgraph.prebuilt.create_react_agent`.
    "langgraph>=1.2,<2.0",
    "langchain>=1.3,<2.0",
    "langchain-anthropic>=1.4,<2.0",
    "langchain-core>=1.4,<2.0",
    # HTTP client for calling the surrogate API
    "httpx>=0.28",
    # Config (mirrors api_extension's pydantic-settings pattern)
    "pydantic-settings>=2.14",
    # CLI niceness
    "rich>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "respx>=0.23",                  # httpx mock
    "mypy>=2.0",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"
